--- a/notebooks/ETL.ipynb
+++ b/notebooks/ETL.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -54,6 +54,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "✅ Conexión exitosa a la base de datos PostgreSQL local 'Tipvos'.\n",
+            "✅ Tablas creadas o recreadas exitosamente.\n",
             "✅ Chunk 1 insertado.\n",
             "✅ Chunk 2 insertado.\n",
             "✅ Chunk 3 insertado.\n",
@@ -137,7 +139,7 @@
             "✅ Chunk 81 insertado.\n",
             "✅ Chunk 82 insertado.\n",
             "✅ Chunk 83 insertado.\n",
-            "🎉 Datos cargados con claves naturales como PK.\n"
+            "🎉 Datos cargados con claves naturales como PK en la base de datos PostgreSQL local.\n"
           ]
         }
       ],
@@ -147,8 +149,26 @@
         "from psycopg2.extras import execute_values\n",
         "from psycopg2.extensions import AsIs\n",
         "\n",
+        "# --- Configuración ---\n",
+        "# 1. Ruta del archivo CSV\n",
+        "csv_file_path = '../Data/online_retail_II.csv' # Asegúrate de que este archivo esté en la misma carpeta o proporciona la ruta completa\n",
+        "\n",
+        "# 2. Detalles de conexión a tu base de datos PostgreSQL local\n",
+        "db_user = 'postgres'  # Cambia esto a tu usuario de PostgreSQL\n",
+        "db_password = 'postgres' # Cambia esto a tu contraseña de PostgreSQL\n",
+        "db_host = 'localhost' # Generalmente 'localhost' para una base de datos local\n",
+        "db_port = '5433'      # Puerto por defecto de PostgreSQL\n",
+        "db_name = 'Tipvos' # Cambia esto al nombre de tu base de datos\n",
+        "\n",
+        "# --- Código Modificado ---\n",
+        "\n",
         "# 1. Cargar datos\n",
-        "df = pd.read_csv('online_retail_II.csv')\n",
+        "try:\n",
+        "    df = pd.read_csv(csv_file_path)\n",
+        "except FileNotFoundError:\n",
+        "    print(f\"Error: El archivo '{csv_file_path}' no se encontró. Asegúrate de que la ruta sea correcta.\")\n",
+        "    exit()\n",
+        "\n",
         "df.columns = [col.strip().lower().replace(\" \", \"_\") for col in df.columns]\n",
         "df.dropna(inplace=True)\n",
         "\n",
@@ -161,8 +181,17 @@
         "df['customer_id'] = df['customer_id'].astype(int)\n",
         "df['country'] = df['country'].astype(str)\n",
         "\n",
-        "# 2. Conexión a Supabase\n",
-        "engine = create_engine(\"postgresql://postgres.wrwpkkyeukjuisjlbihn:postgres@aws-0-us-east-2.pooler.supabase.com:6543/postgres\")\n",
+        "# 2. Conexión a PostgreSQL local\n",
+        "try:\n",
+        "    engine = create_engine(f\"postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\")\n",
+        "    # Prueba la conexión\n",
+        "    with engine.connect() as connection:\n",
+        "        connection.execute(text(\"SELECT 1\"))\n",
+        "    print(f\"✅ Conexión exitosa a la base de datos PostgreSQL local '{db_name}'.\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Error al conectar a la base de datos PostgreSQL: {e}\")\n",
+        "    print(\"Por favor, verifica tus credenciales y que la base de datos esté corriendo.\")\n",
+        "    exit()\n",
         "\n",
         "# 3. Crear tablas con claves naturales\n",
         "with engine.begin() as conn:\n",
@@ -195,8 +224,8 @@
         "    cantidad INT,\n",
         "    precio_unitario FLOAT\n",
         ");\n",
-        "\n",
         "    \"\"\"))\n",
+        "print(\"✅ Tablas creadas o recreadas exitosamente.\")\n",
         "\n",
         "# 4. Función de inserción con ON CONFLICT DO NOTHING\n",
         "def insert_on_conflict(table, conn, keys, data_iter):\n",
@@ -204,9 +233,15 @@
         "    with raw_conn.cursor() as cur:\n",
         "        values = list(data_iter)\n",
         "        columns = ', '.join(keys)\n",
-        "        insert_stmt = f\"INSERT INTO {table.name} ({columns}) VALUES %s ON CONFLICT DO NOTHING\"\n",
+        "        # Usar AsIs para evitar que psycopg2 cite incorrectamente el nombre de la tabla\n",
+        "        insert_stmt = sql.SQL(\"INSERT INTO {table} ({columns}) VALUES %s ON CONFLICT DO NOTHING\").format(\n",
+        "            table=sql.Identifier(table.name),\n",
+        "            columns=sql.SQL(', ').join(sql.Identifier(k) for k in keys)\n",
+        "        )\n",
         "        execute_values(cur, insert_stmt, values)\n",
         "    raw_conn.commit()\n",
+        "\n",
+        "from psycopg2 import sql # Importar sql para usar sql.SQL e sql.Identifier\n",
         "\n",
         "# 5. Insertar por chunks\n",
         "chunk_size = 10000\n",
@@ -234,11 +269,14 @@
         "    # fact_ventas\n",
         "    fact_df = chunk[['invoice', 'fecha', 'customer_id', 'stockcode', 'quantity', 'price']].copy()\n",
         "    fact_df.columns = ['invoice', 'fecha', 'customer_id', 'stockcode', 'cantidad', 'precio_unitario']\n",
+        "    # Para fact_ventas, es mejor usar 'multi' o un enfoque diferente si esperas duplicados en las claves foráneas,\n",
+        "    # ya que 'ON CONFLICT DO NOTHING' aquí afectaría a toda la fila de la tabla de hechos.\n",
+        "    # Por simplicidad, se mantiene 'multi', que es el método predeterminado para inserciones masivas en SQLAlchemy.\n",
         "    fact_df.to_sql('fact_ventas', engine, if_exists='append', index=False, method='multi')\n",
         "\n",
         "    print(f\"✅ Chunk {i // chunk_size + 1} insertado.\")\n",
         "\n",
-        "print(\"🎉 Datos cargados con claves naturales como PK.\")\n"
+        "print(\"🎉 Datos cargados con claves naturales como PK en la base de datos PostgreSQL local.\")"
       ]
     }
   ],
@@ -247,7 +285,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -260,7 +299,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.5"
+      "version": "3.12.0"
     }
   },
   "nbformat": 4,
